[package]
name = "oxidite-cache"
version = "0.1.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Caching backends (Memory, Redis) for the Oxidite web framework"
license = "MIT"
repository = "https://github.com/Kyle6012/rust-oxidite"
keywords = ["cache", "redis", "memory", "async", "web"]
categories = ["caching", "web-programming"]

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
