[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Main Oxidite framework from crates.io
oxidite = "1.0"

# Additional dependencies
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
